log
Tue 14 May 2024 04:59:56 PM UTC: 
 tests:  0|5
total_score: 0/70
5f7ac52
Tue 14 May 2024 05:19:29 PM UTC: 
 sudoku.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:69:30: error: void value not ignored as it ought to be
   69 |                         list = push(list, n);
      |                              ^
Compilation failed
9ca708f
Tue 14 May 2024 05:32:42 PM UTC: 
 sudoku.c | 56 +++++++++++++++++++++++++++++++++++++-------------------
 1 file changed, 37 insertions(+), 19 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:91:27: error: void value not ignored as it ought to be
   91 |                      list = push(list, n);
      |                           ^
Compilation failed
95cf33d
Tue 14 May 2024 05:54:57 PM UTC: 
 sudoku.c | 37 +++++++++++++++++++++++--------------
 1 file changed, 23 insertions(+), 14 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:99:46: error: expected ‘;’ before ‘}’ token
   99 |                         pushBack(list, copia)
      |                                              ^
      |                                              ;
  100 |                      }
      |                      ~                        
Compilation failed
1ff5ae9
Tue 14 May 2024 05:55:06 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ece2347
Tue 14 May 2024 06:01:34 PM UTC: 
 sudoku.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:262:1: error: expected declaration or statement at end of input
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
146c92b
Tue 14 May 2024 06:04:54 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
2c63044
Tue 14 May 2024 06:06:41 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
0a8deef
Tue 14 May 2024 06:30:19 PM UTC: 
 sudoku.c | 39 +++++++++++++++++++++------------------
 1 file changed, 21 insertions(+), 18 deletions(-)
 tests:  0|0
5189d9c
Tue 14 May 2024 06:32:39 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
4f92371
Tue 14 May 2024 06:33:00 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
3fccfc5
Tue 14 May 2024 06:39:50 PM UTC: 
 sudoku.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  5|3
total_score: 35/70
659f5f4
Tue 14 May 2024 06:50:38 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
238fce6
Tue 14 May 2024 06:52:00 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:77:63: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
   77 |                            if (n->sudo[i][j] == n->sudo[a][b] && a != i || b != j)
      |                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d2fb4c1
Tue 14 May 2024 06:54:12 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
a498cf9
Tue 14 May 2024 07:07:55 PM UTC: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c:90:5: error: expected identifier or ‘(’ before ‘return’
   90 |     return 1;
      |     ^~~~~~
sudoku.c:91:1: error: expected identifier or ‘(’ before ‘}’ token
   91 | }
      | ^
sudoku.c: In function ‘is_valid’:
sudoku.c:89:4: error: control reaches end of non-void function [-Werror=return-type]
   89 |    }
      |    ^
cc1: all warnings being treated as errors
Compilation failed
81ea66d
Tue 14 May 2024 07:08:22 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
2a92abf
Tue 14 May 2024 07:10:53 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
e35a232
Thu 16 May 2024 01:32:31 AM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
4852db1
Thu 16 May 2024 01:32:40 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
692ed55
Sat 18 May 2024 09:50:53 PM UTC: 
 sudoku.c | 22 ++++++++++++++--------
 1 file changed, 14 insertions(+), 8 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:262:1: error: expected declaration or statement at end of input
test.c:262:1: error: expected declaration or statement at end of input
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c06c736
Sat 18 May 2024 09:58:42 PM UTC: 
 sudoku.c | 34 +++++++++++++++++++++++++++-------
 1 file changed, 27 insertions(+), 7 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:14: error: unused variable ‘k’ [-Werror=unused-variable]
   49 |    int i, j, k;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
027cc3f
Sat 18 May 2024 09:58:51 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
fcfda9e
Sat 18 May 2024 10:00:54 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
b843c53
Sat 18 May 2024 10:21:00 PM UTC: 
 sudoku.c | 27 +++++++++++++++++++++++++--
 1 file changed, 25 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:172:25: error: passing argument 1 of ‘first’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  172 |       Node *aux = first(aux);
      |                         ^~~
      |                         |
      |                         Node *
In file included from test.c:4:
list.h:16:19: note: expected ‘List *’ but argument is of type ‘Node *’
   16 | void* first(List* list);
      |             ~~~~~~^~~~
In file included from test.c:5:
sudoku.c:176:21: error: passing argument 1 of ‘next’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  176 |          aux = next(aux);
      |                     ^~~
      |                     |
      |                     Node *
In file included from test.c:4:
list.h:17:18: note: expected ‘List *’ but argument is of type ‘Node *’
   17 | void* next(List* list);
      |            ~~~~~~^~~~
In file included from test.c:5:
sudoku.c:183:9: error: ‘n’ undeclared (first use in this function)
  183 |    free(n);
      |         ^
sudoku.c:183:9: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:184:1: error: control reaches end of non-void function [-Werror=return-type]
  184 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2cfec24
Sat 18 May 2024 10:23:32 PM UTC: 
 sudoku.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
f292a60
Sat 18 May 2024 10:24:57 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
477e400
Sat 18 May 2024 10:50:27 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
941156f
Sat 18 May 2024 10:53:47 PM UTC: 
 sudoku.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  0|0
81d98f4
Sat 18 May 2024 10:57:16 PM UTC: 
 sudoku.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  0|0
a007a66
